Fixed all of the Views height, and added Modals to Topic, Comment and Review

--- a/SchoolDiarySystem/Views/Comment/Update.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Update.cshtml
@@ -4,7 +4,8 @@
 }
 @using SchoolDiarySystem.Models
 @model Comments
-<div class="dashboard-page-one">
+
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Comment</h3>
@@ -40,7 +41,7 @@
                             </div>
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Comment *</label>
-                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off", rows = "5" })
+                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off", style = "margin-top: 0px; margin-bottom: 0px; height: 150px;" })
                                 @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
@@ -52,6 +53,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
