--- a/SchoolDiarySystem/Views/MyKids/IndexTopic.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/IndexTopic.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Topics>
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Topic Board</h3>
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 
 @section Scripts {}
