--- a/SchoolDiarySystem/Views/Subject/Create.cshtml
+++ b/SchoolDiarySystem/Views/Subject/Create.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Subjects
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Subject</h3>
@@ -57,6 +57,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
