--- a/SchoolDiarySystem/Views/User/CreateAdmin.cshtml
+++ b/SchoolDiarySystem/Views/User/CreateAdmin.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Users
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Create Admin</h3>
@@ -68,6 +68,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
