--- a/SchoolDiarySystem/Views/Class/Update.cshtml
+++ b/SchoolDiarySystem/Views/Class/Update.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Class
 
-<div class="dashboard-page-one" style="position: relative; height: 100%;">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Class</h3>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 
 @section Scripts {}
