--- a/SchoolDiarySystem/Views/Comment/Create.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Create.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Comments
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Comment</h3>
@@ -50,7 +50,7 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Comment *</label>
-                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off" })
+                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off", style = "margin-top: 0px; margin-bottom: 0px; height: 150px;" })
                                 @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
@@ -62,6 +62,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
