--- a/SchoolDiarySystem/Views/Comment/Review.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Review.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SchoolDiarySystem.Models
 @model Reviews
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Review</h3>
@@ -24,12 +24,12 @@
                     @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="new-added-form">
                         <div class="row">
-                            <div class="col-xl-8 col-lg-6 col-12 form-group">
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Review *</label>
-                                @Html.TextAreaFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "review", autocomplete = "off", rows = "5" })
+                                @Html.TextAreaFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "review", autocomplete = "off", style = "margin-top: 0px; margin-bottom: 0px; height: 150px;" })
                                 @Html.ValidationMessageFor(m => m.Review, "", new { @class = "text-danger" })
                             </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Select Date *</label>
                                 @Html.TextBoxFor(m => m.ReviewDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "reveiwDate", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.ReviewDate, "", new { @class = "text-danger" })
@@ -43,6 +43,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
