--- a/SchoolDiarySystem/Views/Director/Index.cshtml
+++ b/SchoolDiarySystem/Views/Director/Index.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Users
 
-<div class="dashboard-page-one" style="height: 100%; position:relative;">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
         </div>
@@ -89,6 +89,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
