--- a/SchoolDiarySystem/Views/MyKids/Index.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/Index.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Students>
 
-<div class="dashboard-page-one" style="position: relative; height: 100%;">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Parent Dashboard</h3>
@@ -73,6 +73,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
