--- a/SchoolDiarySystem/Views/MyKids/IndexComment.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/IndexComment.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Comments>
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Comment Board for My Kids</h3>
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 
 @section Scripts {}
