--- a/SchoolDiarySystem/Views/Parent/Update.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Update.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Parents
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Parent</h3>
@@ -53,6 +53,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
