--- a/SchoolDiarySystem/Views/Professor/Index.cshtml
+++ b/SchoolDiarySystem/Views/Professor/Index.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Students>
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Teacher Dashboard</h3>
@@ -166,6 +166,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
