--- a/SchoolDiarySystem/Views/Room/Create.cshtml
+++ b/SchoolDiarySystem/Views/Room/Create.cshtml
@@ -5,48 +5,49 @@
 @using SchoolDiarySystem.Models
 @model Rooms
 
-<div class="dashboard-page-one" style="height:100%; position:relative">
-    <div class="dashboard-content-one">
-        <div class="breadcrumbs-area">
-            <h3>Room</h3>
-            <ul>
-                <li>
-                    <a href="@Url.Action("Index", "Admin")">Home</a>
-                </li>
-                <li>Add New Room</li>
-            </ul>
-        </div>
-        <div class="card height-auto">
-            <div class="card-body">
-                <div class="heading-layout1">
-                    <div class="item-title">
-                        <h3>Add New Room</h3>
-                    </div>
+
+@*<div class="dashboard-page-one">*@
+<div class="dashboard-content-one">
+    <div class="breadcrumbs-area">
+        <h3>Room</h3>
+        <ul>
+            <li>
+                <a href="@Url.Action("Index", "Admin")">Home</a>
+            </li>
+            <li>Add New Room</li>
+        </ul>
+    </div>
+    <div class="card height-auto">
+        <div class="card-body">
+            <div class="heading-layout1">
+                <div class="item-title">
+                    <h3>Add New Room</h3>
                 </div>
-                @using (Html.BeginForm("Create", "Room", FormMethod.Post))
-                {
-                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
-                    <form class="new-added-form">
-                        <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-12 form-group">
-                                <label>Room Number *</label>
-                                @Html.TextBoxFor(m => m.RoomNo, new { @class = "form-control", placeholder = "Write room number...", type = "number", id = "firstname", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.RoomNo, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-6 col-lg-6 col-12 form-group">
-                                <label>Room Type *</label>
-                                @Html.TextBoxFor(m => m.RoomType, new { @class = "form-control", placeholder = "Laboratory, Class,...", id = "lastname", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.RoomType, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mg-t-8">
-                                <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                            </div>
-                        </div>
-                    </form>
-                }
             </div>
+            @using (Html.BeginForm("Create", "Room", FormMethod.Post))
+            {
+                @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
+                <form class="new-added-form">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-12 form-group">
+                            <label>Room Number *</label>
+                            @Html.TextBoxFor(m => m.RoomNo, new { @class = "form-control", placeholder = "Write room number...", type = "number", id = "firstname", autocomplete = "off" })
+                            @Html.ValidationMessageFor(m => m.RoomNo, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-12 form-group">
+                            <label>Room Type *</label>
+                            @Html.TextBoxFor(m => m.RoomType, new { @class = "form-control", placeholder = "Laboratory, Class,...", id = "lastname", autocomplete = "off" })
+                            @Html.ValidationMessageFor(m => m.RoomType, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-12 form-group mg-t-8">
+                            <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                        </div>
+                    </div>
+                </form>
+            }
         </div>
     </div>
 </div>
+@*</div>*@
 
 @section Scripts {}
