--- a/SchoolDiarySystem/Views/Room/Index.cshtml
+++ b/SchoolDiarySystem/Views/Room/Index.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Rooms>
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Room</h3>
@@ -85,7 +85,7 @@
                                                     <span class="flaticon-more-button-of-three-dots"></span>
                                                 </a>
                                                 <div class="dropdown-menu dropdown-menu-right">
-                                                    <a class="dropdown-item modal-trigger" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                    <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                                     @*<a class="dropdown-item" href="@Url.Action("Delete", "Room", new { id = item.RoomID })"><i class="fas fa-times text-orange-red"></i>Delete</a>*@
                                                     <a class="dropdown-item" href="@Url.Action("Update", "Room", new { id = item.RoomID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                                     <a class="dropdown-item" href="@Url.Action("Details", "Room", new { id = item.RoomID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
@@ -126,6 +126,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
