--- a/SchoolDiarySystem/Views/Student/Details.cshtml
+++ b/SchoolDiarySystem/Views/Student/Details.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Students
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Student</h3>
@@ -98,6 +98,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
