--- a/SchoolDiarySystem/Views/Subject/Index.cshtml
+++ b/SchoolDiarySystem/Views/Subject/Index.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Subjects>
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Subject</h3>
@@ -92,7 +92,7 @@
                                                 <span class="flaticon-more-button-of-three-dots"></span>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item modal-trigger" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                                 @*<a class="dropdown-item" href="@Url.Action("Delete", "Subject", new { id = item.SubjectID })"><i class="fas fa-times text-orange-red"></i>Delete</a>*@
                                                 <a class="dropdown-item" href="@Url.Action("Update", "Subject", new { id = item.SubjectID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                                 <a class="dropdown-item" href="@Url.Action("Details", "Subject", new { id = item.SubjectID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
@@ -132,6 +132,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
