--- a/SchoolDiarySystem/Views/Teacher/Details.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Details.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Teachers
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Teacher</h3>
@@ -106,6 +106,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
