--- a/SchoolDiarySystem/Views/User/Details.cshtml
+++ b/SchoolDiarySystem/Views/User/Details.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Users
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>User</h3>
@@ -166,6 +166,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
